Remove dependencies to check conda env build

--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,6 @@
 name: aiida-mybinder
 channels:
   - conda-forge
-dependencies:
-  - aiida-core
-  - aiida-core.services
+# dependencies:
+#   - aiida-core
+#   - aiida-core.services
